# cortev-hiring-project

./: .dockerignore  .gitignore  AWS-structure.md  Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini
corteva_weather/: asgi.py  settings.py  urls.py  wsgi.py
corteva_weather/adapters/: unitofwork.py
corteva_weather/corn_yield/: apps.py  filtersets.py  models.py  serializers.py  services.py  urls.py  views.py
corteva_weather/corn_yield/adapters/: repository.py  unitofwork.py
corteva_weather/corn_yield/migrations/: 0001_initial.py
corteva_weather/corn_yield/tests/: integration_test.py  unit_test.py
corteva_weather/weather/: apps.py  filtersets.py  models.py  serializers.py  services.py  urls.py  views.py
corteva_weather/weather/adapters/: repositories.py  unitofwork.py
corteva_weather/weather/migrations/: 0001_initial.py  0002_remove_weatherstation_station_id.py  0003_alter_weatherrecord_unique_together.py  0004_rename_weatherstatistics_weatherstatistic_and_more.py  0005_rename_avg_max_temp_weatherstatistic_avg_max_temperature_and_more.py  0006_rename_avg_precipitation_weatherstatistic_total_precipitation.py  0007_alter_weatherstatistic_station.py  0008_alter_weatherstatistic_station.py  0009_weatherstatistic_year.py  0010_alter_weatherstatistic_unique_together.py  0011_alter_weatherstatistic_station.py  0012_alter_weatherstatistic_avg_max_temperature_and_more.py
corteva_weather/weather/tests/: integration_test.py  unit_test.py
kubernetes-config/: deployment.yaml  service.yaml
terraform/: .terraform.lock.hcl  kubernetes.tf  terraform.tfstate
(+7 files in other folders)
