[project]
name = "cortev-hiring-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Elysium1436",email = "bryan.af7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "django-filter (>=24.3,<25.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false